--- a/3.Infraestructure/OG.Zoo.Infraestructure.Utils/OG.Zoo.Infraestructure.Utils.csproj
+++ b/3.Infraestructure/OG.Zoo.Infraestructure.Utils/OG.Zoo.Infraestructure.Utils.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Google.Cloud.Firestore" Version="1.0.0-beta19" />
+    <PackageReference Include="Isopoh.Cryptography.Argon2" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
