--- a/4.UI/OG.Zoo.UI/appsettings.json
+++ b/4.UI/OG.Zoo.UI/appsettings.json
@@ -8,5 +8,9 @@
   "FirebaseConfig": {
     "ProjectId": "zoologico-b286c",
     "Credentials": "PrivateKey/zoologico-api-key.json"
+  },
+
+  "ServicesConfig": {
+    "Key": "wH7QRdBdFmdnfz9g"
   }
 }
