--- a/4.UI/OG.Zoo.UI/appsettings.json
+++ b/4.UI/OG.Zoo.UI/appsettings.json
@@ -12,5 +12,12 @@
 
   "ServicesConfig": {
     "Key": "wH7QRdBdFmdnfz9g"
+  },
+
+  "EmailConfig": {
+    "Server": "in-v3.mailjet.com",
+    "Username": "7d11d97c4f5fabb74b2e3ef10a75a416",
+    "Password": "e30514bf370a534b7e960a76696ef4c1",
+    "Sender": "zoo@otherg.com"
   }
 }
