Added email warning about password changed

--- a/4.UI/OG.Zoo.UI/OG.Zoo.UI.csproj
+++ b/4.UI/OG.Zoo.UI/OG.Zoo.UI.csproj
@@ -44,6 +44,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Templates\PasswordChanged.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Templates\EmailRecovery.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
