--- a/2.Application/OG.Zoo.Application.Services/OG.Zoo.Application.Services.csproj
+++ b/2.Application/OG.Zoo.Application.Services/OG.Zoo.Application.Services.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\1.Domain\OG.Zoo.Domain.Interfaces\OG.Zoo.Domain.Interfaces.csproj" />
-    <ProjectReference Include="..\OG.Zoo.Application.Interfaces\OG.Zoo.Application.Interfaces.csproj" />
+    <ProjectReference
+      Include="..\..\1.Domain\OG.Zoo.Domain.Interfaces\OG.Zoo.Domain.Interfaces.csproj" />
+    <ProjectReference
+      Include="..\OG.Zoo.Application.Interfaces\OG.Zoo.Application.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
