--- a/1.Domain/OG.Zoo.Domain.Entities/OG.Zoo.Domain.Entities.csproj
+++ b/1.Domain/OG.Zoo.Domain.Entities/OG.Zoo.Domain.Entities.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\1.Domain\OG.Zoo.Domain.Entities\OG.Zoo.Domain.Entities.csproj" />
+    <PackageReference Include="Google.Cloud.Firestore" Version="3.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference
       Include="..\..\3.Infraestructure\OG.Zoo.Infraestructure.Utils\OG.Zoo.Infraestructure.Utils.csproj" />
   </ItemGroup>
