--- a/1.Domain/OG.Zoo.Domain.Interfaces/OG.Zoo.Domain.Interfaces.csproj
+++ b/1.Domain/OG.Zoo.Domain.Interfaces/OG.Zoo.Domain.Interfaces.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OG.Zoo.Domain.Model\OG.Zoo.Domain.Entities.csproj" />
+    <ProjectReference Include="..\OG.Zoo.Domain.Entities\OG.Zoo.Domain.Entities.csproj" />
   </ItemGroup>
 
 </Project>
