--- a/3.Infraestructure/OG.Zoo.Infraestructure.Data/OG.Zoo.Infraestructure.Data.csproj
+++ b/3.Infraestructure/OG.Zoo.Infraestructure.Data/OG.Zoo.Infraestructure.Data.csproj
@@ -1,15 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Cloud.Firestore" Version="1.0.0-beta19" />
+    <PackageReference Include="Google.Cloud.Firestore" Version="3.9.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\1.Domain\OG.Zoo.Domain.Interfaces\OG.Zoo.Domain.Interfaces.csproj" />
+    <ProjectReference
+      Include="..\..\1.Domain\OG.Zoo.Domain.Interfaces\OG.Zoo.Domain.Interfaces.csproj" />
     <ProjectReference Include="..\OG.Zoo.Infraestructure.Utils\OG.Zoo.Infraestructure.Utils.csproj" />
   </ItemGroup>
 
