--- a/3.Infraestructure/OG.Zoo.Infraestructure.Utils/OG.Zoo.Infraestructure.Utils.csproj
+++ b/3.Infraestructure/OG.Zoo.Infraestructure.Utils/OG.Zoo.Infraestructure.Utils.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentEmail.Razor" Version="2.5.2" />
-    <PackageReference Include="FluentEmail.Smtp" Version="2.5.2" />
-    <PackageReference Include="Google.Cloud.Firestore" Version="1.0.0-beta19" />
-    <PackageReference Include="Isopoh.Cryptography.Argon2" Version="1.1.1" />
+    <PackageReference Include="FluentEmail.Razor" Version="3.0.2" />
+    <PackageReference Include="FluentEmail.Smtp" Version="3.0.2" />
+    <PackageReference Include="Google.Cloud.Firestore" Version="3.9.0" />
+    <PackageReference Include="Isopoh.Cryptography.Argon2" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
