--- a/4.UI/OG.Zoo.UI/OG.Zoo.UI.csproj
+++ b/4.UI/OG.Zoo.UI/OG.Zoo.UI.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <AssemblyName>OG.Zoo.UI</AssemblyName>
     <RootNamespace>OG.Zoo.UI</RootNamespace>
     <TypeScriptToolsVersion>3.1</TypeScriptToolsVersion>
@@ -32,15 +32,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="LightInject.Microsoft.AspNetCore.Hosting" Version="1.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="8.0.11" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\3.Infraestructure\OG.Zoo.Infraestructure.IoC\OG.Zoo.Infraestructure.IoC.csproj" />
-    <ProjectReference Include="..\..\3.Infraestructure\OG.Zoo.Infraestructure.Utils\OG.Zoo.Infraestructure.Utils.csproj" />
+    <ProjectReference
+      Include="..\..\3.Infraestructure\OG.Zoo.Infraestructure.IoC\OG.Zoo.Infraestructure.IoC.csproj" />
+    <ProjectReference
+      Include="..\..\3.Infraestructure\OG.Zoo.Infraestructure.Utils\OG.Zoo.Infraestructure.Utils.csproj" />
   </ItemGroup>
 
   <ItemGroup>
